Kubernetes/envops/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: envops-core
  labels:
    app.kubernetes.io/part-of: envops
