Kubernetes/envops/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: envops
  namespace: envops-core

  annotations:
    
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "10"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"

    
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"

    
    nginx.ingress.kubernetes.io/proxy-buffering: "off"

    
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:

          
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: envops-backend
                port:
                  number: 3000

          
          - path: /socket.io
            pathType: Prefix
            backend:
              service:
                name: envops-backend
                port:
                  number: 3000

          
          - path: /
            pathType: Prefix
            backend:
              service:
                name: envops-frontend
                port:
                  number: 80
